--- a/html.html
+++ b/html.html
@@ -5,9 +5,8 @@
 	<title>Document</title>
 	<link rel="stylesheet" type="text/css" href="css.css">
 </head>
-<body><center><font-size="100px">
-	Rock Paper Scissors
-<
+<body><center>
+	<h1>Rock Paper Scissors</h1>
 </center>
 </body>
 </html>
