--- a/html.html
+++ b/html.html
@@ -7,6 +7,9 @@
 </head>
 <body><center>
 	<h1>Rock Paper Scissors</h1>
+<br>
+	<button oneclick="rockPick()">Rock</button>
+	<button oneclick="rockPick()">Rock</button>
 </center>
 </body>
 </html>
