--- a/html.html
+++ b/html.html
@@ -9,7 +9,10 @@
 	<h1>Rock Paper Scissors</h1>
 <br>
 	<button oneclick="rockPick()">Rock</button>
-	<button oneclick="rockPick()">Rock</button>
+	<button oneclick="rockPick()">Paper</button>
+	<button oneclick="rockPick()">Scissors</button>
+
+	<script
 </center>
 </body>
 </html>
