--- a/html.html
+++ b/html.html
@@ -12,7 +12,7 @@
 	<button oneclick="rockPick()">Paper</button>
 	<button oneclick="rockPick()">Scissors</button>
 
-	<script
+	<script type="text/javascript" src="app.js"></script>
 </center>
 </body>
 </html>
