--- a/html.html
+++ b/html.html
@@ -9,8 +9,8 @@
 	<h1>Rock Paper Scissors</h1>
 <br>
 	<button oneclick="rockPick()">Rock</button>
-	<button oneclick="rockPick()">Paper</button>
-	<button oneclick="rockPick()">Scissors</button>
+	<button oneclick="paperPick()">Paper</button>
+	<button oneclick="scissorsPick()">Scissors</button>
 
 	<script type="text/javascript" src="app.js"></script>
 </center>
