--- a/html.html
+++ b/html.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Rock, Paper, Scissors Game!</title>
 	<link rel="stylesheet" type="text/css" href="css.css">
 </head>
 <body><center>
-	<h1>Rock Paper Scissors</h1>
+	<h1>Rock, Paper, Scissors!</h1>
 <br>
-	<button oneclick="rockPick()">Rock</button>
-	<button oneclick="paperPick()">Paper</button>
-	<button oneclick="scissorsPick()">Scissors</button>
+	<button onclick="rockPick()">Rock</button>
+	<button onclick="paperPick()">Paper</button>
+	<button onclick="scissorsPick()">Scissors</button>
 
 	<script type="text/javascript" src="app.js"></script>
 </center>
