--- a/html.html
+++ b/html.html
@@ -7,9 +7,11 @@
 </head>
 <body><center>
 	<h1>Rock, Paper, Scissors!</h1>
-<br>
-	<button onclick="rockPick()">Rock</button>
-	<button onclick="paperPick()">Paper</button>
+<br><button onclick="rockPick()">
+	<img src="http://www.clker.com/cliparts/a/X/f/Z/a/g/rock-hi.png"></button>
+	<button onclick="paperPick()">
+		<img src="http://www.images.clipartpanda.com/paper-clip-art-paper-clip-art-projects.jpg">
+	</button>
 	<button onclick="scissorsPick()">Scissors</button>
 
 	<script type="text/javascript" src="app.js"></script>
