--- a/html.html
+++ b/html.html
@@ -5,14 +5,16 @@
 	<title>Rock, Paper, Scissors Game!</title>
 	<link rel="stylesheet" type="text/css" href="css.css">
 </head>
-<body><center>
+<body>
+<center>
 	<h1>Rock, Paper, Scissors!</h1>
 <br><button onclick="rockPick()">
-	<img src="http://www.clker.com/cliparts/a/X/f/Z/a/g/rock-hi.png"></button>
+	<img src="http://www.clker.com/cliparts/a/X/f/Z/a/g/rock-hi.png" height="25" width="25"></button>
 	<button onclick="paperPick()">
-		<img src="http://www.images.clipartpanda.com/paper-clip-art-paper-clip-art-projects.jpg">
+		<img src="http://www.polyvore.com/cgi/img-thing?.out=jpg&size=l&tid=70162748" height="25" width="25">
 	</button>
 	<button onclick="scissorsPick()">Scissors</button>
+		<img src="">
 
 	<script type="text/javascript" src="app.js"></script>
 </center>
