--- a/html.html
+++ b/html.html
@@ -9,12 +9,12 @@
 <center>
 	<h1>Rock, Paper, Scissors!</h1>
 <br><button onclick="rockPick()">
-	<img src="http://www.clker.com/cliparts/a/X/f/Z/a/g/rock-hi.png" height="25" width="25"></button>
+	<img src="http://www.clker.com/cliparts/a/X/f/Z/a/g/rock-hi.png" height="50" width="50"><br>Rock</button>
 	<button onclick="paperPick()">
-		<img src="http://www.polyvore.com/cgi/img-thing?.out=jpg&size=l&tid=70162748" height="25" width="25">
+		<img src="http://www.polyvore.com/cgi/img-thing?.out=jpg&size=l&tid=70162748" height="50" width="50"><br>Paper
 	</button>
 	<button onclick="scissorsPick()">Scissors</button>
-		<img src="">
+		<img src=""><br>Scissors
 
 	<script type="text/javascript" src="app.js"></script>
 </center>
