--- a/html.html
+++ b/html.html
@@ -13,9 +13,9 @@
 	<button onclick="paperPick()">
 		<img src="http://www.polyvore.com/cgi/img-thing?.out=jpg&size=l&tid=70162748" height="50" width="50"><br>Paper
 	</button>
-	<button onclick="scissorsPick()">Scissors</button>
-		<img src=""><br>Scissors
-
+	<button onclick="scissorsPick()">
+		<img src="http://www.clker.com/cliparts/b/9/b/7/11954219321422944761johnny_automatic_scissors.svg.hi.png" height="50" width="50"><br>Scissors
+</button>
 	<script type="text/javascript" src="app.js"></script>
 </center>
 </body>
