--- a/html.html
+++ b/html.html
@@ -8,6 +8,10 @@
 <body>
 <center>
 	<h1>Rock, Paper, Scissors!</h1>
+
+<div></div>
+
+
 <br><button onclick="rockPick()">
 	<img src="http://www.clker.com/cliparts/a/X/f/Z/a/g/rock-hi.png" height="50" width="50"><br>Rock</button>
 	<button onclick="paperPick()">
